<resources>
    <string name="app_name">Pigeon Insurance</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_create">New Quote</string>
    <string name="fName_label_text">First Name:</string>
    <string name="lName_label_text">Lst Name:</string>
    <string name="get_quote_button">Fetch Quote</string>
    <string name="title_activity_quote_display">QuoteDisplayActivity</string>
    <string name="id_label">ID:</string>
    <string name="userId_label">User ID:</string>
    <string name="age_label_display">Age:</string>
    <string name="licence_label_display">Licence:</string>
    <string name="noClaims_label_display">No Claims:</string>
    <string name="penaltyPoints_label_display">Pen.Points:</string>
    <string name="carReg_label_display">Car Reg:</string>
    <string name="carMake_label_display">Car Make:</string>
    <string name="carModel_label_display">Car Model:</string>
    <string name="carEngine_label_display">Engine Size:</string>
    <string name="thirdParty_label_display">Third Party:</string>
    <string name="full_label_display">Full:</string>
    <string name="monthly_label_display">Monthly:</string>
    <string name="thirdMonthly_label_display">Monthly:</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_quote_list">QuoteListActivity</string>

</resources>
