<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.miteto.quotemaster.Activity.QuoteDisplayActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/fName_label_text"
                android:id="@+id/fName_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:text="First Name"
                android:id="@+id/fName_text_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:editable="false"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/lName_label_text"
                android:id="@+id/lName_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/lName_text_edit"
                android:text="Last Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:editable="false"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/age_label_display"
                android:id="@+id/age_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/age_text_edit"
                android:text="Age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/noClaims_label_display"
                android:id="@+id/noClaims_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/noClaims_text_edit"
                android:text="No Claims(yrs)"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/licence_label_display"
                android:id="@+id/licence_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/licence_text_edit"
                android:text="Licence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/penaltyPoints_label_display"
                android:id="@+id/penaltyPoints_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/penaltyPoints_text_edit"
                android:text="Pen, Points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/carReg_label_display"
                android:id="@+id/carReg_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/carReg_text_edit"
                android:text="Car Registration"
                android:editable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/carMake_label_display"
                android:id="@+id/carMake_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/carMake_text_edit"
                android:text="Car Make"
                android:editable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/carModel_label_display"
                android:id="@+id/carModel_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/carModel_text_edit"
                android:text="Car Model"
                android:editable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:text="@string/carEngine_label_display"
                android:id="@+id/carEngine_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/carEngine_text_edit"
                android:text="Engine Size"
                android:editable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="2"
                android:imeOptions="actionDone"/>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:text="Save Changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:onClick="getQuote"/>
    </LinearLayout>



</LinearLayout>

